--- a/style.css
+++ b/style.css
@@ -2,12 +2,14 @@ h1{
     font-size: 250%;
 }
 @include media-breakpoint-down(sm){
+    h1{
+        font-size: 400%;
+    }
     
 }
 
 @include media-breakpoint-down(lg){
-
-}
-@include media-breakpoint-down(){
-
+    h1{
+        font-size: 500%;
+    }
 }
